force-app/main/default/objects/Product_Item__c.object
<CustomObject>
    <fields>
        <fullName>CNX_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CNX Product</label>
        <referenceTo>CNX_Products__c</referenceTo>
        <relationshipLabel>Product Items</relationshipLabel>
        <relationshipName>Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Product Items</relationshipLabel>
        <relationshipName>Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Bundle__c.CNX_Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.CNX_Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Bundle__c</referenceTo>
        <relationshipLabel>Product Items</relationshipLabel>
        <relationshipName>Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Product-{0000}</displayFormat>
        <label>Product Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>